--- a/src/components/dashboard/dash.css
+++ b/src/components/dashboard/dash.css
@@ -204,3 +204,22 @@ textarea::placeholder {
   border-radius: 4px;
   cursor: pointer;
 }
+
+.blogs-container{
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top:50px;
+}
+
+.blogs{
+
+    width: calc(33.33% - 20px); 
+  margin-bottom: 20px;
+}
+
+.blog-img{
+    width:150px;
+    height:120px;
+}
